# techne

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-19-agent-quality-mcp-phase-2-agent-decision-contract.md  2026-06-22-agent-quality-mcp-pyright-lsp-validator-capabilities.md  2026-06-30-agent-quality-mcp-public-release-readiness.md
scripts/: pr_bot_review_loop.sh
src/agent_quality_mcp/: __init__.py  actions.py  audit.py  compression.py  config.py  decision.py  diagnostics.py  exceptions.py  exclusions.py  grouping.py  models.py  patching.py  paths.py  response.py  risk.py  server.py  service.py  shadow.py  suggestions.py  tool_validation.py  tools.py  validators.py  workspace.py
src/agent_quality_mcp/cli/: __init__.py  (+6 more)
tests/integration/: test_validate_patch_demo.py  test_workspace_flows.py
tests/unit/: test_actions.py  test_audit.py  test_cli_adapters.py  test_cli_entrypoint.py  test_config.py  test_decision.py  test_diagnostics.py  test_exclusions.py  test_grouping.py  test_lsp_protocol.py  test_models.py  test_package_metadata.py  test_patching.py  test_paths.py  test_pyright_lsp.py  test_response_contract.py  test_risk.py  test_risk_suggestions.py  test_runner.py  test_schema_descriptions.py  test_service.py  test_tool_validation.py  test_tools_server.py  test_validators.py  test_workspace_shadow.py
(+14 files in other folders)
