[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agent-quality-mcp"
version = "0.1.0"
description = "MCP server for secure Python patch quality validation."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Agent Quality MCP Maintainers" }]
dependencies = [
  "mcp>=1.9.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
agent-quality-mcp = "agent_quality_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_quality_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src", "tests"]

[tool.agent_quality_mcp]
default_mode = "standard"
default_safety_mode = "read_only"
uv_offline = true
workspace_exclusions = [
  ".git",
  ".hg",
  ".svn",
  ".venv",
  "venv",
  "env",
  "node_modules",
  "__pycache__",
  ".pytest_cache",
  ".ruff_cache",
  ".mypy_cache",
  ".pyright",
  "dist",
  "build",
  ".tox",
  ".nox",
]
secret_file_patterns = [".env", ".env.*", "*.pem", "*.key", "id_rsa", "id_ed25519"]
secret_redaction_patterns = []
